browser/themes/linux/preferences/search.css
/
*
This
Source
Code
Form
is
subject
to
the
terms
of
the
Mozilla
Public
*
License
v
.
2
.
0
.
If
a
copy
of
the
MPL
was
not
distributed
with
this
*
file
You
can
obtain
one
at
http
:
/
/
mozilla
.
org
/
MPL
/
2
.
0
/
.
*
/
#
defaultEngine
>
.
menulist
-
label
-
box
>
.
menulist
-
icon
{
height
:
16px
;
}
/
*
work
around
a
display
:
none
in
Linux
'
s
menu
.
css
see
bug
1112310
*
/
.
searchengine
-
menuitem
>
.
menu
-
iconic
-
left
{
display
:
-
moz
-
box
;
}
#
engineList
{
margin
:
.
5em
6px
;
}
#
engineList
treechildren
:
:
-
moz
-
tree
-
checkbox
(
checked
)
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
checkbox
/
cbox
-
check
.
gif
"
)
;
}
#
engineList
treechildren
:
:
-
moz
-
tree
-
image
(
engineName
)
{
-
moz
-
margin
-
end
:
4px
;
-
moz
-
margin
-
start
:
0
;
width
:
16px
;
height
:
16px
;
}
#
engineList
treechildren
:
:
-
moz
-
tree
-
row
{
min
-
height
:
20px
;
}
#
engineList
treechildren
:
:
-
moz
-
tree
-
drop
-
feedback
{
background
-
color
:
Highlight
;
width
:
10000px
;
/
*
100
%
doesn
'
t
work
;
10k
is
hopefully
larger
than
any
window
we
may
have
overflow
isn
'
t
visible
.
*
/
height
:
2px
;
-
moz
-
margin
-
start
:
0
;
}

