Bug 1112688 - Height of Search pane preferences window too small in some localizations, hiding the 'Add more search engines' link, r=Gijs.
UltraBlame original commit: f37d5d147f3f70a9da1a60f23c727d1430d1e6f2

--- a/browser/themes/linux/preferences/search.css
+++ b/browser/themes/linux/preferences/search.css
@@ -78,6 +78,45 @@ height
 }
 /
 *
+Reserve
+space
+so
+that
+localized
+labels
+can
+wrap
+without
+hiding
+the
+'
+add
+more
+engines
+'
+link
+at
+the
+bottom
+.
+See
+bug
+1112688
+.
+*
+/
+#
+oneClickSearchProvidersGroup
+{
+margin
+-
+bottom
+:
+3em
+;
+}
+/
+*
 work
 around
 a
